--- a/pom.xml
+++ b/pom.xml
@@ -24,5 +24,10 @@
 	  <artifactId>junit</artifactId>
 	  <version>4.12</version>
 	</dependency>
+	<dependency>
+      <groupId>com.oracle</groupId>
+      <artifactId>ojdbc7</artifactId>
+      <version>12.1.0</version>
+    </dependency>
   </dependencies>
 </project>
